test/error/ConstructorVirtual.fu
public class Test
{
	public virtual Test() { //ERROR: Constructor cannot be virtual
	}
}
